[package]
name = "strat"
version = "0.1.0"
authors = ["Melvillian <melvillevt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
failure = "0.1.6"
log = "0.4.0"
env_logger = "0.7.1"
postgres = { version = "0.15.2", features = ["with-chrono"] }
postgres-openssl = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
openssl = "0.10"
